syntax = "proto3";

package curate;

option go_package = "github.com/Grishun/curate/transport/grpc/generated";

service RatesService {
  rpc SubscribeRate(SubscribeRateRequest) returns (stream SubscribeRateResponse);
}

message SubscribeRateRequest {
  string currency = 1;
  optional string provider = 2;
}

message SubscribeRateResponse {
  double rate = 1;
  int64 received_at = 2;
}


